# arve

./: CMakeLists.txt  README.md
apps/: CMakeLists.txt  counter.cpp  main.cpp  receiver.cpp  scratch.cpp
docs/: packets.md
include/arve/: CircularFifo.h  DataSpan.h  FrameAssembler.h  FrameGrabber.h  ImageData.h  PacketSource.h  Packets.h  ProducerConsumerQueue.h  RawFrame.h  Receiver.h  SimpleQueue.h  UdpReceiver.h  UdpSocket.h  arve.h  defs.h  terminal.h  utils.h
python/: CMakeLists.txt
python/apps/: play.py
python/src/: frame_grabber.cpp  main.cpp
src/: CircularFifo.test.cpp  FrameGrabber.cpp  FrameGrabber.test.cpp  PacketSource.cpp  ProducerConsumerQueue.test.cpp  RawFrame.test.cpp  SimpleQueue.test.cpp  UdpSocket.cpp  UdpSocket.test.cpp  terminal.cpp  utils.cpp
tests/: CMakeLists.txt  main.cpp
